--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
 
       - name: Deploy Application
         run: |
-          cd C:/xampp/htdocs/githubsample
+          cd F:\Projects\githubsample
 
           git pull origin staging
