--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - name: Deploy Application
         run: |
-          cd C:\Users\Jezmahboi\Projects\githubsample
+          cd C:/Users/Jezmahboi/Projects/githubsample
 
           git pull origin main
