--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -3,11 +3,11 @@ name: Try GitHub Actions
 on:
   push:
     branches:
-      - main
+      - staging
 
 jobs:
   deploy:
-    runs-on: [self-hosted, githubsample-runner-staging]
+    runs-on: [self-hosted, githubsample-runner]
 
     steps:
       - name: Configure Git
@@ -17,6 +17,6 @@ jobs:
     
       - name: Deploy Application
         run: |
-          cd C:/Users/Jezmahboi/Projects/githubsample
+          cd C:/Users/Jezmahboi/Projects/githubsample/staging/githubsample
 
-          git pull origin main
+          git pull origin staging
